--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,6 +137,6 @@ stages:
               inputs:
                 targetType: 'inline'
                 script: |
+                  az extension list
                   az ml run submit-pipeline -n ADBExamplePipeline -y $(aml.pipeline) -w $(aml.workspace) -g $(aml.rg) 
                   az feedback
-                  
