--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,10 +38,7 @@ stages:
               inputs:
                 targetType: 'inline'
                 script: |
-                  sudo apt install -y --allow-downgrades azure-cli=2.0.77-1~bionic
-                  az extension remove --name azure-devops
-                  az extension add --source https://github.com/Azure/azure-devops-cli-extension/releases/download/20200401.4/azure_devops-0.18.0-py2.py3-none-any.whl -y
-                  az extension add --source https://azurecliext.blob.core.windows.net/release/azure_cli_ml-1.0.85-py2.py3-none-any.whl -y
+                  az extension add -n azure-cli-ml
                   pip install -U databricks-cli
                   az login --service-principal -u $(sp.appid) -p $(sp.password) --tenant $(sp.tenant)
             - task: Bash@3
