remove -o flag from ml pipeline submit step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,6 +138,4 @@ stages:
               inputs:
                 targetType: 'inline'
                 script: |
-                  az extension list
-                  az ml run submit-pipeline -n ADBExamplePipeline -y $(aml.pipeline) -w $(aml.workspace) -g $(aml.rg) -o jsonc
-                  az feedback
+                  az ml run submit-pipeline -n ADBExamplePipeline -y $(aml.pipeline) -w $(aml.workspace) -g $(aml.rg)
